docs: fix swagger schema
