# src/user/user.controller.ts
@@ -19,7 +19,7 @@ export const userController = {
     const totalPages = Math.ceil(totalItems / limit);
     const hasNextPage = page < totalPages;
 
-    return response.json({ data, totalItems, totalPages, hasNextPage });
+    return response.json({ data, page, itemsPerPage: limit, totalItems, totalPages, hasNextPage });
   },
 
   async getOne(request: Request, response: Response) {
